<resources>
    <string name="app_name">MyPortfolio | Udacity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="headerText">My Nanodegree Apps!</string>

    <!-- String for buttons on HomeScreen -->
    <string name="spotifyStreamer">Spotify Streamer</string>
    <string name="scoresApp">Scores App</string>
    <string name="libraryApp">Library App</string>
    <string name="buildItBigger">Build It Bigger</string>
    <string name="xyzReader">XYZ Reader</string>
    <string name="capstone">Capstone: My own app</string>

</resources>
